fix: label layouts to account for overflow

--- a/components/input/src/styles/emphasized/style.scss
+++ b/components/input/src/styles/emphasized/style.scss
@@ -68,6 +68,9 @@
     text-transform: uppercase;
     font-size: 32px;
     line-height: 38px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   input {
@@ -83,23 +86,16 @@
     justify-content: center;
     align-items: center;
     flex: 1;
+    overflow: hidden;
   }
 
   .displayValue {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     display: none;
+    width: 100%;
 
     &.hasContent:is(.withValue):not(.hasFocus) {
       display: block;
     }
-  }
-
-  .displayValueWrapper {
-    transform: translateY(-50%);
   }
 
   &.withValue {
